--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -59,3 +59,12 @@ body {
   outline-offset: -3px;
 }
 
+/* Hide scrollbar while keeping scroll behavior */
+.scrollbar-hide {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
